Fri Nov 13 23:30:00 2009  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkoptions.c, dice.c: Simplify dice entry method dialog

Tue Nov 03 17:30:00 2009  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkboard.c: Improve manual dice selection colours and text

Sat Oct 31 21:48:27 CET 2009 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gtkgame.c, import.c, timer.c: dnd didn't work under
	linux at all. Plus minor compiler warnings.

Thu Oct 29 11:30:00 2009  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Allow files to be dropped onto gnubg to open them
		Bug #27685 suggested by Eric.

Mon Oct 26 16:30:00 2009  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* render.c, gtkboard.c + others: Sort out 2d dice colours when in 3d mode

Sun Oct 18 12:30:00 2009  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Sort out full screen transitions

Tue Oct 13 19:30:00 2009  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkboard.c + others: Move gnubgid into status bar

Mon Oct 12 21:30:00 2009  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Simplify player and rollout evaluation settings

Fri Oct  9 15:46:17 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c: error in last checkin source and dest reversed

Wed Oct  7 21:17:04 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c: protect movelist during autosave

Tue Oct  2 04:32:27 MDT 2009 Michael Petch <mpetch@capp-sysware.com>

	* progress.c: Fix assert/crash when doing a single rollout 
	when no stopall button is present

Thu Oct  1 23:04:28 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c, backgammon.h, commands.inc, external.c, gnubg.c,
	gtkgame.c, gtkoptions.c, gtkprefs.c, gtksplash.c, import.c,
	multithread.c, multithread.h, play.c, rollout.c, set.c, sgf.c, show.c,
	speed.c: add autosave functionallity during analysis and rollout.
	disabled by default -- needs testing.

Thu Oct  1 15:18:32 CEST 2009 Christian Anthon <anthon@kiku.dk>
